--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- Header -->
     <div class="row">
       <div class="col text-center">
-        <div class="header-wrap">
+        <div class="header-wrap" id="header-wrap" onscroll="fixHeader()">
           <img width="430" height="180" class="img-fluid" src="./files/thesealingcompany.png" />
         </div>
       </div>
@@ -81,6 +81,7 @@
     crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
     crossorigin="anonymous"></script>
+    <script type="text/javascript" src="scripts/sticky-header.js"></script>
 </body>
 
 </html>
