--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
 <body>
   <div class="container">
 
-    <!-- Header -->
+   <div>
+      <!-- Header -->
     <div class="row">
       <div class="col text-center">
-        <div class="header-wrap" id="header-wrap" onscroll="fixHeader()">
+        <div class="header-wrap" id="header-wrap">
           <img width="430" height="180" class="img-fluid" src="./files/thesealingcompany.png" />
         </div>
       </div>
@@ -31,7 +32,7 @@
     <!-- Nav -->
     <div id="linkNav" class="row align-items-center justify-content-center">
       
-      <div class="col">
+      <div class="col" id="nav-links">
         <a class="active" href="#">HOME</a>
         <a class="link" href="#">FAQ</a>
         <a class="link" href="#">PROJECTS</a>
@@ -41,6 +42,7 @@
         <a class="link" href="#">SLIPPERS</a>
       </div>
     </div>
+   </div>
 
     <!-- Body -->
     <div class="page-wrap">
@@ -82,6 +84,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
     crossorigin="anonymous"></script>
     <script type="text/javascript" src="scripts/sticky-header.js"></script>
+     <script type="text/javascript" src="scripts/jquery-3.3.1.min.js"></script>
 </body>
 
 </html>
